added auth service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - mongodb-secondary
       - mongodb-arbiter
       - rabbitmq
+      - auth
+      - billing
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
@@ -32,9 +34,28 @@ services:
       - mongodb-secondary
       - mongodb-arbiter
       - rabbitmq
+      - auth
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
+  auth: 
+    build: 
+      context: .
+      dockerfile: ./apps/auth/Dockerfile
+      target: development
+    command: npm run start:dev auth
+    env_file:
+      - ./apps/auth/.env
+    depends_on:
+      - mongodb-primary
+      - mongodb-secondary
+      - mongodb-arbiter
+      - rabbitmq
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    ports:
+      - '3001:3001'
   rabbitmq:
     image:  rabbitmq
     ports:
